<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fhd" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.electionup2.Home"
        tools:ignore="ScrollViewSize" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/scegliopzione"
            android:textColor="@color/white"
            android:textSize="@dimen/dimensionecredenziali"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trentacinque"
            android:background="@color/white"
            android:onClick="onClickVotanti"
            android:text="@string/datiSezioneButton"
            android:textSize="@dimen/dimensioneOpzioni" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/interlinea"
            android:background="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClick"
            android:text="@string/InviaVoti"
            android:textSize="@dimen/dimensioneOpzioni" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/interlinea"
            android:background="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickAssegnaVotoReal"
            android:text="Assegna voti tap-to-tap"
            android:textSize="@dimen/dimensioneOpzioni" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/interlinea"
            android:background="@color/white"
            android:onClick="onClickRisultati"
            android:text="@string/VisualizzaRisultati"
            android:textSize="@dimen/dimensioneOpzioni" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trentacinque"
            android:background="@color/lightblue"
            android:onClick="onClickLogout"
            android:text="@string/etichetta_logout"
            android:textSize="@dimen/dimensioneOpzioni" />
    </LinearLayout>

</ScrollView>