<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   		xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="@color/white"
        >


<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:onClick="onClick"
    android:text="@string/etichetta_Conferma"
    android:textColor="@color/white" />

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:background="@color/red"
    android:onClick="onClickIndietro"
    android:text="@string/etichetta_Indietro"
    android:textColor="@color/white" />

<View
    android:id="@+id/linea"
    android:layout_width="fill_parent"
    android:layout_height="2dp"
    android:background="#000000"
    android:layout_below="@id/button1"/>

<ScrollView
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textView1"
     >
    
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
        
    
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fhd"
        tools:context="${relativePackage}.${activityClass}">
        
    </TableLayout>
   
    
    
    
    </HorizontalScrollView>
</ScrollView>

<TextView
    android:id="@+id/textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/linea"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:text="@string/confermadati"
    android:textSize="@dimen/dimconferma"
    android:textStyle="bold|italic" 
    android:textColor="@color/black"/>

</RelativeLayout>
